manifests/02-deployments.yaml
apiVersion: v1
kind: Service
metadata:
  name: tarantool
  namespace: apps
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 32080
      targetPort: 3000
      name: "http"
  selector:
    app: tarantool
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tarantool-v1
  namespace: apps
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tarantool
      version: v1
  template:
    metadata:
      labels:
        app: tarantool
        version: v1
    spec:
      containers:
        - image: jdkz/tarantool_reminder:v1
          name: tarantool-v1
          ports:
            - containerPort: 3000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tarantool-v2
  namespace: apps
  labels:
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tarantool
      version: v2
  template:
    metadata:
      labels:
        app: tarantool
        version: v2
    spec:
      containers:
        - image: jdkz/tarantool_reminder:v1
          name: tarantool-v2
          ports:
            - containerPort: 3000
