manifests/03-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tarantool-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "arch.homework"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tarantool
              port:
                number: 8080
